Integrated dragula for drag and drop

--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ul class="nav navbar-nav">
      <li><a routerLink="home" routerLinkActive="active"> <span> Home </span></a></li>
      <li><a routerLink="boxes" routerLinkActive="active"> <span> Boxes  </span></a></li>
-     <li><a routerLink="other" routerLinkActive="active"><span> Other </span></a></li>
+     <li><a routerLink="dragula" routerLinkActive="active"><span> Other </span></a></li>
      <li><a routerLink="about" routerLinkActive="active"><span> About us </span></a></li>
      <li><a routerLink="contact" routerLinkActive="active"><span> Contact us </span></a></li>
     </ul>
