Dragula second use case

--- a/myapp/src/app/home/home.component.html
+++ b/myapp/src/app/home/home.component.html
@@ -1,4 +1,33 @@
 
-<div class="">
-    <h1>Home Page!!!!</h1>
+<div class="container" [dragula]='"boxes"'>
+  <div class="row" [dragula]='"smallboxes"'>
+    <div class="col-sm-2 small-box">
+        <span class="handle">+</span>
+        Small-Box 1
+    </div>
+    <div class="col-sm-2 small-box">
+      Small-Box 2
+    </div>
+    <div class="col-sm-2 small-box">
+      Small-Box 3
+    </div>
+    <div class="col-sm-2 small-box">
+      Small-Box 4
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5 medium-box1">
+      Medium-Box 1
+    </div>
+    <div class="col-sm-1">
+      </div>
+    <div class="col-sm-5 medium-box2">
+      Medium-Box 2
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 large-box">
+        Large-Box 1
+    </div>
+  </div>
 </div>
