--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -2,8 +2,7 @@
     <a class="navbar-brand" href="#">Demo_LOGO</a>
     <ul class="nav navbar-nav">
      <li><a routerLink="home" routerLinkActive="active"> <span> Home </span></a></li>
-     <li><a routerLink="boxes" routerLinkActive="active"> <span> Boxes  </span></a></li>
-     <li><a routerLink="dragula" routerLinkActive="active"><span> Other </span></a></li>
+     <li><a routerLink="dragula" routerLinkActive="active"><span> Dragula</span></a></li>
      <li><a routerLink="about" routerLinkActive="active"><span> About us </span></a></li>
      <li><a routerLink="contact" routerLinkActive="active"><span> Contact us </span></a></li>
     </ul>
